<resources>
    <string name="app_name">MUTEX</string>
    <string name="feedback_form">FeedBack</string>
    <string name="feedback">Feedback</string>
    <string name="powered_by">Powered By</string>
    <string name="mutex_logo_in_splash_screen">mutex_logo_in_splash_screen</string>
    <string name="mutexsummit">#MUTEXSummit</string>
    <string name="location">Location</string>
    <string name="speakers">Speakers</string>
    <string name="partners">Partners</string>
    <string name="agenda">Agenda</string>
    <string name="address">Zagazig</string>
    <string name="link_map">http://bit.ly/3bdnR9a</string>


    <string name="send_review">Send review</string>
    <string name="cancel">Cancel</string>
    <string name="later">Later</string>
    <string name="title">App rating</string>
    <string name="description">Please write your feedback</string>
    <string name="defaultComment">This app is pretty cool !</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
